Rename docker-compose and fix volume issue

--- a/resources/docker-compose.yml
+++ b/resources/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       GO_PIPELINE_COUNTER: $GO_PIPELINE_COUNTER
       GO_TO_REVISION: $GO_TO_REVISION
     volumes:
-      - .:/repos
+      - ..:/repos
 
   success:
     extends:
