--- a/glide.yaml
+++ b/glide.yaml
@@ -4,7 +4,7 @@ import:
   version: ^1.1.0
   subpackages:
   - statsd
-- package: github.com/Sirupsen/logrus
+- package: github.com/sirupsen/logrus
   version: ^1.0.3
 testImport:
 - package: github.com/stretchr/testify
